Įgyvendintas US-14 + kiti pataisymai